<resources>
    <string name="app_name">Let Me In</string>
    <string name="Send">Send</string>
    <string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="Calculating">Calculating...</string>
    <string name="samePassword">Passwords has to be the same!</string>
    <string name="wrongPassword">Password fields must to be filled!</string>
    <string name="wrongEmail">Wrong Email!</string>
    <string name="registerFailed">Register Failed!</string>
    <string name="wrongPasswordLessThen6char">The password must be at least 6 character!</string>
    <string name="verifyMailbox">Verify your mailbox!</string>
    <string name="errorReportTextView">Report Error</string>
    <string name="calculating">Calculating...</string>
    <string name="startRecording">Press START to start recording</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="login">Login</string>
    <string name="createNewAccount">Create new account</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAccount">Already have account?</string>
    <string name="title_activity_drawer_test">DrawerTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Number_of_records">Number of records</string>
    <string name="Email">Email</string>
    <string name="Number_of_steps">Number of steps made</string>
    <string name="Number_of_sessions">Number of sessions</string>
    <string name="used_devices">Used devices</string>
    <string name="userid">User ID</string>
    <string name="press_start_to_collect">Press Start to start collecting raw data.</string>
    <string name="downloading_model">Downloading Model</string>
    <string name="downloaded">Downloaded</string>
</resources>
