<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background_lighter_50"
    tools:context=".activityes.main.GaitValidationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/actionModeCloseDrawable"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gaitverif_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/alef"
            android:text="Offline"
            android:textColor="@color/colorRed"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gaitverif_titleTextView" />

        <TextView
            android:id="@+id/gaitverif_titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/aldrich"
            android:text="Gait Validation"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gaitverif_textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="-current status-"
            android:textColor="@color/colorBlue5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gaitverif_textView2" />

        <Button
            android:id="@+id/gaitverif_buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/aldrich"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/Start"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gaitverif_textViewStatus" />

        <Button
            android:id="@+id/gaitverif_buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/aldrich"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/Stop"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gaitverif_buttonStart" />


        <Button
            android:id="@+id/gaitverif_verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/aldrich"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="Verify"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gaitverif_buttonStop" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/errorReportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="3dp"
        android:fontFamily="@font/alef"
        android:text="@string/errorReportTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>